# CosmosJourneyer

./: .dep-tree.yml  .dockerignore  .env  .env.example  .eslintignore  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .oxfmtrc.json  .prettierignore  .prettierrc  1.79d2b58e1884741425af.js  1009.4e09f2eb6fb572e7.js  1108.00fe7425e8dfa7de.js  1112.52e00a662903fe65.js  114.4ec3edffd82434c6.js  1245.32964cae5ceebb63.js  1338.d89b67d09a9d7a86.js  1413.c91e9f77aa843175.js  1420.ca81dd390692d997.js  1502.43ebd451f71928a8.js  1619.cedaa2bd44b3b853.js  162.437cc3cdccafcc6f9c1b.js  1633.4b83844c3f106eae.js  1670.5bb47da53daa6519.js  1716.fc28f5ea43e9bb7b.js  178.04b5c4f07b354096.js  1866.8c6422420e97eca3.js  188.565063ee0612af57.js  1952.f3927659c9d3a9fb.js  1966.feebb9a8c1e1ccec.js  21.1a27a1990abb887f.js  2105.c3419aa76b22f25a.js  223.666284787b811d07d13f.js  2257.1aeefa5500661300.js  2268.215af7cfc28314c5.js  2424.4c7eecc89e3e6819.js  2424.dfef1d5ffe9429c3.js  (+203 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
SliderJS-main/: slider.js  slider.ts
babylon/: jsonfn.js
components/: chunk.js  chunk.ts  chunkForge.js  chunkForge.ts  crater.ts  direction.js  direction.ts  planeLOD.js  planeLOD.ts  planet.js  planet.old.js  planet.old.ts  planet.ts  planetChunk.js  planetChunk.ts  planetSide.js  planetSide.ts  proceduralCube.js  proceduralCube.ts  proceduralSphere.js  quadtree.js  quadtree.ts  worker.js  worker.ts  workerInstruction.ts
config/: rspack.base.js
css/: style.css  style.scss  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
(+11892 files in other folders)
