[package]
name = "cosmos_journeyer"
version = "0.1.0"
description = "Cosmos Journeyer"
authors = ["Barthélemy Paléologue"]
license = "GPL-3.0"
repository = "https://github.com/BarthPaleologue/CosmosJourneyer"
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0-rc.17", features = [] }
tauri-plugin-log = "2.0.0-rc"
